--- a/angularGpt/src/app/presentation/pages/orthographyPage/orthographypage.component.html
+++ b/angularGpt/src/app/presentation/pages/orthographyPage/orthographypage.component.html
@@ -1,12 +1,9 @@
 <div class="chat-container">
-    <div class="chat-messages">
-
-
-
-        <div class="grid gap-y-2">
-            
-        </div>
-
-
+  <div class="chat-messages">
+    <div class="grid gap-y-2">
+      <app-chat-message
+        text="Excribe lo que quieres que revise"
+      ></app-chat-message>
     </div>
+  </div>
 </div>
